APPS-739 Fix horizontal scrolling issue

--- a/web/src/main/resources/org/geogebra/web/resources/scss/menu-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/menu-styles.scss
@@ -64,6 +64,7 @@ $menuWidth: 320px;
 		background-color: $white;
 		transition-property: left;
 		overflow: auto;
+		overflow-x: hidden;
 
 		&.transitionIn {
 			transition-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
